--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,6 +618,24 @@ section {
   margin-bottom: 0;
 }
 
+#about .btn-resume {
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 40px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #fff;
+  background: #34b7a7;
+}
+
+#about .btn-resume:hover {
+  background: #3dc8b7;
+}
+
 /*--------------------------------------------------------------
 # Skills
 --------------------------------------------------------------*/
